Updating configs to support prod deployment

--- a/docker/supervisord-full.conf
+++ b/docker/supervisord-full.conf
@@ -34,7 +34,7 @@ stdout_logfile=/app/logs/nginx-out.log
 stderr_logfile=/app/logs/nginx-err.log
 
 [fcgi-program:snowstream-server]
-socket=tcp://localhost:8000
+socket=tcp://0.0.0.0:8000
 command=/bin/bash -c "sleep 10 && /app/docker/snowstream-server.sh"
 directory=/app
 autostart=true
