Tweak configs and docker to support local dev and prod deployment

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -29,6 +29,14 @@ http {
       listen 80 default_server;
       listen [::]:80 default_server;
 
-      root /app;
+      root /app/prod-frontend;
+
+      location / {
+        try_files $uri $uri/ /index.html;
+      }
+
+      location /api {
+        proxy_pass http://0.0.0.0:8000$request_uri;
+      }
     }
 }
