go2rtc put in place to, in the next task, transcode the inputs to a common format
Jellyfin is super picky about what it shows from incoming M3U streams.

--- a/docker/supervisord-full.conf
+++ b/docker/supervisord-full.conf
@@ -9,6 +9,21 @@ port=*:9001
 username=snowstream
 password=snowstream
 
+[unix_http_server]
+file=/var/run/supervisor.sock
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+[program:go2rtc]
+command=/usr/bin/go2rtc
+directory=/go2rtc
+autostart=true
+autorestart=true
+startsecs=5
+stdout_logfile=/app/logs/go2rtc-out.log
+stderr_logfile=/app/logs/go2rtc-err.log
+
 [program:rabbitmq]
 command=/app/docker/rabbitmq.sh
 autostart=true
