This nginx log watching is so brittle.
Going to try ripping out nginx and using straight python request handling

--- a/docker/supervisord-full.conf
+++ b/docker/supervisord-full.conf
@@ -66,3 +66,12 @@ autorestart=true
 startsecs=5
 stdout_logfile=/app/logs/worker-out.log
 stderr_logfile=/app/logs/worker-err.log
+
+[program:snowstream-monitor]
+command=/bin/bash -c "sleep 20 && /app/docker/snowstream-monitor.sh"
+directory=/app
+autostart=true
+autorestart=true
+startsecs=5
+stdout_logfile=/app/logs/monitor-out.log
+stderr_logfile=/app/logs/monitor-err.log
