End to end video access through the API and nginx

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -38,5 +38,10 @@ http {
       location /api {
         proxy_pass http://0.0.0.0:8000$request_uri;
       }
+
+      location /media/ {
+        autoindex on;
+        alias /web-media/;
+      }
     }
 }
