--- a/android-client/build.gradle
+++ b/android-client/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath 'com.android.tools.build:gradle:8.2.2'
     }
 }
 
@@ -57,4 +57,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "org.videolan.android:libvlc-all:3.6.0-eap11"
 }
