--- a/android-client/build.gradle
+++ b/android-client/build.gradle
@@ -57,5 +57,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "org.videolan.android:libvlc-all:4.0.0-eap14"
+    implementation files('./libs/libmpv-0.1.4.aar')
 }
