Format the codebase with black.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "python.analysis.diagnosticSeverityOverrides": {
         "reportUnusedImport": "information",
         "reportMissingImports": "none"
+    },
+    "[python]": {
+        "editor.formatOnType": false
     }
 }
