--- a/android-client/build.gradle
+++ b/android-client/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation files('./libs/libmpv-0.1.4.aar')
+    implementation 'androidx.leanback:leanback:1.2.0-alpha04'
+    implementation 'androidx.leanback:leanback-preference:1.2.0-alpha04'
+
 }
