--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:icon="@mipmap/ic_launcher"
         android:banner="@mipmap/ic_banner"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Snowstream"
         android:networkSecurityConfig="@xml/network_security_config"
         android:largeHeap="true"
         android:usesCleartextTraffic="true"
@@ -31,7 +30,8 @@
             android:exported="true"
             android:screenOrientation="landscape"
             android:launchMode="singleTask"
-            tools:ignore="DiscouragedApi">
+            tools:ignore="DiscouragedApi"
+            android:theme="@style/Theme.Snowstream">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
