--- a/expo/package.json
+++ b/expo/package.json
@@ -4,12 +4,12 @@
   "main": "expo-router/entry",
   "dependencies": {
     "expo": "^50.0.11",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "npm:react-native-tvos@^0.73.6-0",
-    "expo-router": "~3.4.8",
+    "expo-router": "~3.4.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "expo-linking": "~6.2.2",
@@ -32,8 +32,8 @@
   "private": true,
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   }
 }
