--- a/expo/package.json
+++ b/expo/package.json
@@ -14,7 +14,8 @@
     "react-native-screens": "~3.29.0",
     "expo-linking": "~6.2.2",
     "expo-constants": "~15.4.6",
-    "expo-dev-client": "~3.3.11"
+    "expo-dev-client": "~3.3.11",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "~7.20.0",
