Playing around with the TV GUI:

--- a/expo/app.json
+++ b/expo/app.json
@@ -23,6 +23,9 @@
     "scheme": "snowstream",
     "android": {
       "package": "com.simplepathstudios.snowstream"
+    },
+    "ios": {
+      "bundleIdentifier": "com.simplepathstudios.snowstream"
     }
   },
   "web": {
