--- a/expo/app.json
+++ b/expo/app.json
@@ -16,7 +16,8 @@
           }
         }
       ],
-      "expo-router"
+      "expo-router",
+      "expo-secure-store"
     ],
     "name": "snowstream",
     "slug": "snowstream",
