--- a/expo/package.json
+++ b/expo/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "dependencies": {
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.8",
     "expo": "^50.0.11",
+    "expo-constants": "~15.4.6",
+    "expo-dev-client": "~3.3.11",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.9",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "npm:react-native-tvos@^0.73.6-0",
-    "expo-router": "~3.4.9",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.6",
-    "expo-dev-client": "~3.3.11",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-secure-store": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "~7.20.0",
