--- a/expo/android/app/build.gradle
+++ b/expo/android/app/build.gradle
@@ -163,7 +163,7 @@ dependencies {
         }
     }
 
-//     implementation("com.facebook.react:flipper-integration")
+// //     implementation("com.facebook.react:flipper-integration")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
