--- a/expo/package.json
+++ b/expo/package.json
@@ -11,6 +11,7 @@
     "expo-dev-client": "~3.3.11",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.9",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -18,8 +19,8 @@
     "react-native": "npm:react-native-tvos@^0.73.6-0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "expo-secure-store": "~12.8.1"
+    "react-native-vlc-media-player": "^1.0.67",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "~7.20.0",
