--- a/expo/package.json
+++ b/expo/package.json
@@ -3,30 +3,27 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "dependencies": {
-    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.8",
-    "expo": "^50.0.11",
-    "expo-constants": "~15.4.6",
-    "expo-dev-client": "~3.3.11",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.9",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.1",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^3.5.11",
+    "expo-secure-store": "^13.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "npm:react-native-tvos@^0.73.6-0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-vlc-media-player": "^1.0.67",
-    "react-native-web": "~0.19.6"
+    "react-native": "npm:react-native-tvos@^0.74.1-0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-video": "6.0.0-beta.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.20.0",
-    "@react-native-tvos/config-tv": "^0.0.7",
+    "@babel/core": "^7.24.0",
+    "@react-native-tvos/config-tv": "^0.0.9",
     "@types/react": "~18.2.45",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "expo": {
     "install": {
