tvOS working. Video playback with the remote

--- a/expo/app.json
+++ b/expo/app.json
@@ -23,6 +23,9 @@
     "slug": "snowstream",
     "android": {
       "package": "com.simplepathstudios.snowstream"
+    },
+    "ios": {
+      "bundleIdentifier": "com.simplepathstudios.snowstream"
     }
   }
 }
