--- a/expo/package.json
+++ b/expo/package.json
@@ -15,9 +15,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "npm:react-native-tvos@^0.74.1-0",
-    "react-native-libmpv": "0.5.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-libmpv": "0.5.2",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-video": "6.0.0-beta.1"
   },
   "devDependencies": {
