--- a/expo/android/app/build.gradle
+++ b/expo/android/app/build.gradle
@@ -127,6 +127,7 @@ android {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
+        pickFirst '**arm64-v8a/libc++_shared.so'
     }
 }
 
@@ -149,7 +150,18 @@ android {
         }
     }
 }
-
+repositories{
+  // TODO There must be a way to include this dep in the react native module, but anything I tried threw a bunch of different errors
+  // Workaround for now
+  maven {
+    url "http://9914.us:9876/repository/main/"
+    credentials {
+      username "admin"
+      password "admin1"
+    }
+    allowInsecureProtocol = true
+  }
+}
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
