--- a/expo/android/app/build.gradle
+++ b/expo/android/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: "com.facebook.react"
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
-def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystorePropertiesFile = "/home/storm/develop/snowstream/expo/android/keystore.properties"
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
