--- a/expo/package.json
+++ b/expo/package.json
@@ -7,6 +7,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.8",
     "expo": "^51.0.21",
+    "expo-build-properties": "~0.12.3",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.11",
     "expo-secure-store": "^13.0.1",
