--- a/expo/package.json
+++ b/expo/package.json
@@ -1,31 +1,29 @@
 {
   "name": "snowstream",
-  "version": "1.0.0",
+  "version": "0.5.4",
   "main": "expo-router/entry",
   "dependencies": {
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "axios": "^1.6.8",
-    "expo": "^51.0.21",
-    "expo-build-properties": "~0.12.3",
-    "expo-linking": "^6.3.1",
-    "expo-router": "^3.5.11",
-    "expo-secure-store": "^13.0.1",
-    "expo-splash-screen": "~0.27.4",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "npm:react-native-tvos@^0.74.1-0",
+    "axios": "1.7.2",
+    "expo": "51.0.22",
+    "expo-linking": "6.3.1",
+    "expo-router": "3.5.18",
+    "expo-secure-store": "13.0.2",
+    "expo-splash-screen": "0.27.5",
+    "expo-status-bar": "1.12.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "npm:react-native-tvos@^0.74.3-0",
     "react-native-libmpv": "0.5.6",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-video": "6.0.0-beta.1"
+    "react-native-safe-area-context": "4.10.8",
+    "react-native-screens": "3.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@react-native-tvos/config-tv": "^0.0.9",
-    "@types/react": "~18.2.45",
-    "typescript": "~5.3.3"
+    "@react-native-tvos/config-tv": "0.0.10",
+    "@types/react": "18.3.3",
+    "typescript": "5.5.4"
   },
   "expo": {
     "install": {
