--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snowstream",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "main": "expo-router/entry",
   "dependencies": {
     "@rneui/base": "^4.0.0-rc.8",
@@ -17,7 +17,8 @@
     "react-native": "npm:react-native-tvos@^0.74.3-0",
     "react-native-libmpv": "0.5.6",
     "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "3.32.0"
+    "react-native-screens": "3.32.0",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
