--- a/expo/package.json
+++ b/expo/package.json
@@ -18,6 +18,7 @@
     "react-native-libmpv": "0.5.6",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-super-grid": "^6.0.1",
     "react-native-web": "^0.19.13"
   },
   "devDependencies": {
