Touching up things after server migration

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -39,9 +39,9 @@ http {
         proxy_pass http://0.0.0.0:8000$request_uri;
       }
 
-      location /media/ {
+      location /mnt/ {
         autoindex on;
-        alias /web-media/;
+        alias /mnt/;
       }
     }
 }
