--- a/expo/package.json
+++ b/expo/package.json
@@ -12,6 +12,7 @@
         "expo-secure-store": "13.0.2",
         "expo-splash-screen": "~0.27.6",
         "expo-status-bar": "1.12.1",
+        "expo-video": "^2.0.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "npm:react-native-tvos@^0.74.3-0",
