Rollback the attempt at expo upgrade for expo-video. Rely on another library for web video

--- a/expo/app.json
+++ b/expo/app.json
@@ -19,7 +19,7 @@
       ],
       "expo-router",
       "expo-secure-store",
-      "expo-video"
+      "react-native-video"
     ],
     "name": "snowstream",
     "slug": "snowstream",
