--- a/expo/android/app/build.gradle
+++ b/expo/android/app/build.gradle
@@ -4,10 +4,30 @@ apply plugin: "com.facebook.react"
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
-def keystorePropertiesFile = "/home/storm/develop/snowstream/expo/android/keystore.properties"
+def keystorePropertiesFile = "/home/kretst/develop/snowstream/expo/android/keystore.properties"
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+static def versionToNumber(major, minor, patch) {
+  return patch * 100 + minor * 10000 + major * 1000000
+}
+
+def getRNVersion() {
+  def version = providers.exec {
+    workingDir(projectDir)
+    commandLine("node", "-e", "console.log(require('react-native/package.json').version);")
+  }.standardOutput.asText.get().trim()
+
+  def coreVersion = version.split("-")[0]
+  def (major, minor, patch) = coreVersion.tokenize('.').collect { it.toInteger() }
+
+  return versionToNumber(
+      major,
+      minor,
+      patch
+  )
+}
+def rnVersion = getRNVersion()
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -62,6 +82,11 @@ react {
     //
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
+
+    if (rnVersion >= versionToNumber(0, 75, 0)) {
+        /* Autolinking */
+        autolinkLibrariesWithApp()
+    }
 }
 
 /**
@@ -97,7 +122,7 @@ android {
         versionName "0.5.7"
     }
     signingConfigs {
-        debug {
+         debug {
             storeFile  file(keystoreProperties['KEYSTORE_PATH'])
             storePassword  keystoreProperties['KEYSTORE_PASSWORD']
             keyAlias keystoreProperties['KEY_ALIAS']
@@ -110,7 +135,7 @@ android {
             keyPassword keystoreProperties['KEY_PASSWORD']
             enableV1Signing true
             enableV2Signing true
-        }
+         }
     }
     buildTypes {
         debug {
@@ -121,7 +146,7 @@ android {
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            matchingFallbacks = ['release']
+            crunchPngs (findProperty('android.enablePngCrunchInReleaseBuilds')?.toBoolean() ?: true)
         }
     }
     packagingOptions {
@@ -129,6 +154,14 @@ android {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
         pickFirst '**arm64-v8a/libc++_shared.so'
+    }
+    repositories{
+      // TODO There must be a way to include this dep in the react native module, but anything I tried threw a bunch of different errors
+      // Workaround for now
+      maven {
+        name "reposlite"
+        url "https://reposlite.9914.us/repository/main"
+      }
     }
 }
 
@@ -151,15 +184,7 @@ android {
         }
     }
 }
-repositories{
-  // TODO There must be a way to include this dep in the react native module, but anything I tried threw a bunch of different errors
-  // Workaround for now
-  maven {
-    name "reposiliteRepositoryRepository"
-    url "http://reposlite.9914.us:9876/repository"
-    allowInsecureProtocol = true
-  }
-}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
@@ -189,5 +214,7 @@ dependencies {
     }
 }
 
-apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
-applyNativeModulesAppBuildGradle(project)
+if (rnVersion < versionToNumber(0, 75, 0)) {
+    apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
+    applyNativeModulesAppBuildGradle(project)
+}
