--- a/expo/package.json
+++ b/expo/package.json
@@ -12,14 +12,13 @@
         "expo-secure-store": "13.0.2",
         "expo-splash-screen": "~0.27.6",
         "expo-status-bar": "1.12.1",
-        "expo-video": "^2.0.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "npm:react-native-tvos@^0.74.3-0",
         "react-native-libmpv": "0.5.6",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
-        "react-native-super-grid": "^6.0.1",
+        "react-native-video": "^6.10.0",
         "react-native-web": "^0.19.13"
     },
     "devDependencies": {
