--- a/expo/package.json
+++ b/expo/package.json
@@ -15,6 +15,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "npm:react-native-tvos@^0.74.3-0",
+        "react-native-device-info": "^14.0.4",
         "react-native-libmpv": "0.5.6",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
