--- a/expo/package.json
+++ b/expo/package.json
@@ -20,7 +20,8 @@
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
         "react-native-video": "^6.10.0",
-        "react-native-web": "^0.19.13"
+        "react-native-web": "^0.19.13",
+        "ua-parser-js": "^2.0.3"
     },
     "devDependencies": {
         "@babel/core": "^7.24.0",
