Playing show episodes on a tablet

--- a/expo/app.json
+++ b/expo/app.json
@@ -23,6 +23,9 @@
     ],
     "name": "snowstream",
     "slug": "snowstream",
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
+    },
     "android": {
       "package": "com.simplepathstudios.snowstream"
     },
