--- a/expo/package.json
+++ b/expo/package.json
@@ -8,6 +8,7 @@
         "axios": "1.7.2",
         "expo": "~51.0.38",
         "expo-linking": "6.3.1",
+        "expo-navigation-bar": "~3.0.7",
         "expo-router": "~3.5.23",
         "expo-secure-store": "13.0.2",
         "expo-splash-screen": "~0.27.6",
@@ -16,7 +17,7 @@
         "react-dom": "18.2.0",
         "react-native": "npm:react-native-tvos@^0.74.3-0",
         "react-native-device-info": "^14.0.4",
-        "react-native-libmpv": "0.5.6",
+        "react-native-libmpv": "0.5.7",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
         "react-native-video": "^6.10.0",
