--- a/expo/package.json
+++ b/expo/package.json
@@ -3,6 +3,7 @@
     "version": "0.5.7",
     "main": "expo-router/entry",
     "dependencies": {
+        "@react-native-community/slider": "4.5.2",
         "@rneui/base": "^4.0.0-rc.8",
         "@rneui/themed": "^4.0.0-rc.8",
         "axios": "1.7.2",
