--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -1,14 +1,16 @@
-uvicorn[standard]==0.20.0
-gunicorn==20.1.0
-fastapi[all]==0.104.1
-SQLAlchemy==2.0.19
-psycopg2-binary==2.9.7
 alembic==1.11.2
-pika==1.3.2
-requests==2.31.0
 cloudscraper==1.2.71
+fastapi[all]==0.104.1
+gunicorn==20.1.0
 lxml==4.9.3
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+pika==1.3.2
+psycopg2-binary==2.9.7
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
 requests==2.31.0
+requests==2.31.0
+SQLAlchemy==2.0.19
+tvdb-v4-official==1.1.0
+uvicorn[standard]==0.20.0
+xmltodict==0.14.2
