--- a/expo/app.json
+++ b/expo/app.json
@@ -19,7 +19,16 @@
       ],
       "expo-router",
       "expo-secure-store",
-      "react-native-video"
+      "react-native-video",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          },
+          "ios": {}
+        }
+      ]
     ],
     "name": "snowstream",
     "slug": "snowstream",
