--- a/expo/package.json
+++ b/expo/package.json
@@ -6,6 +6,7 @@
         "@react-native-community/slider": "4.5.2",
         "axios": "1.7.2",
         "expo": "~51.0.38",
+        "expo-build-properties": "~0.12.5",
         "expo-linking": "6.3.1",
         "expo-navigation-bar": "~3.0.7",
         "expo-router": "~3.5.23",
