--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -6,6 +6,7 @@ lxml==4.9.3
 passlib[bcrypt]==1.7.4
 pika==1.3.2
 psycopg2-binary==2.9.7
+pytest==8.3.5
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 requests==2.31.0
