--- a/web-server/requirements.txt
+++ b/web-server/requirements.txt
@@ -11,6 +11,7 @@ python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 requests==2.31.0
 SQLAlchemy==2.0.19
+themoviedb[sync]==1.0.2
 tvdb-v4-official==1.1.0
 uvicorn[standard]==0.20.0
 xmltodict==0.14.2
