--- a/expo/package.json
+++ b/expo/package.json
@@ -1,34 +1,34 @@
 {
     "name": "snowstream",
-    "version": "0.9.5",
+    "version": "0.9.6",
     "main": "expo-router/entry",
     "dependencies": {
-        "@react-native-community/slider": "4.5.2",
-        "axios": "1.7.2",
-        "expo": "~51.0.38",
-        "expo-build-properties": "~0.12.5",
-        "expo-linking": "6.3.1",
-        "expo-navigation-bar": "~3.0.7",
-        "expo-router": "~3.5.23",
-        "expo-secure-store": "13.0.2",
-        "expo-splash-screen": "~0.27.6",
-        "expo-status-bar": "1.12.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "npm:react-native-tvos@^0.74.3-0",
-        "react-native-device-info": "^14.0.4",
+        "@react-native-community/slider": "4.5.7",
+        "axios": "1.9.0",
+        "expo": "53.0.11",
+        "expo-build-properties": "0.14.6",
+        "expo-linking": "7.1.5",
+        "expo-navigation-bar": "4.2.5",
+        "expo-router": "5.0.7",
+        "expo-secure-store": "14.2.3",
+        "expo-splash-screen": "0.30.9",
+        "expo-status-bar": "2.2.3",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-native": "npm:react-native-tvos@0.79.3-0",
+        "react-native-device-info": "14.0.4",
         "react-native-libmpv": "0.6.5",
-        "react-native-safe-area-context": "4.10.5",
-        "react-native-screens": "3.31.1",
-        "react-native-video": "^6.10.0",
-        "react-native-web": "^0.19.13",
-        "ua-parser-js": "^2.0.3"
+        "react-native-safe-area-context": "5.4.1",
+        "react-native-screens": "4.11.1",
+        "react-native-video": "6.14.1",
+        "react-native-web": "0.20.0",
+        "ua-parser-js": "2.0.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.24.0",
-        "@react-native-tvos/config-tv": "0.0.10",
-        "@types/react": "~18.2.79",
-        "typescript": "~5.3.3"
+        "@babel/core": "7.27.4",
+        "@react-native-tvos/config-tv": "0.1.3",
+        "@types/react": "19.1.6",
+        "typescript": "5.8.3"
     },
     "expo": {
         "install": {
