--- a/expo/app.json
+++ b/expo/app.json
@@ -7,15 +7,15 @@
       [
         "@react-native-tvos/config-tv",
         {
-          "androidTVBanner": "./assets/images/icon-400x240.png",
+          "androidTVBanner": "./assets/icon/android/tvbanner.png",
           "appleTVImages": {
-            "icon": "./assets/images/icon-1280x768.png",
-            "iconSmall": "./assets/images/icon-400x240.png",
-            "iconSmall2x": "./assets/images/icon-800x480.png",
-            "topShelf": "./assets/images/icon-1920x720.png",
-            "topShelf2x": "./assets/images/icon-3840x1440.png",
-            "topShelfWide": "./assets/images/icon-2320x720.png",
-            "topShelfWide2x": "./assets/images/icon-4640x1440.png"
+            "icon": "./assets/icon/ios/icon-1280x768.png",
+            "iconSmall": "./assets/icon/ios/icon-400x240.png",
+            "iconSmall2x": "./assets/icon/ios/icon-800x480.png",
+            "topShelf": "./assets/icon/ios/icon-1920x720.png",
+            "topShelf2x": "./assets/icon/ios/icon-3840x1440.png",
+            "topShelfWide": "./assets/icon/ios/icon-2320x720.png",
+            "topShelfWide2x": "./assets/icon/ios/icon-4640x1440.png"
           }
         }
       ],
@@ -32,6 +32,11 @@
         }
       ]
     ],
+    "splash": {
+      "image": "./assets/icon/splash.png",
+      "backgroundColor": "#ff9a3f"
+    },
+    "icon": "./assets/icon/icon.png",
     "name": "snowstream",
     "slug": "snowstream",
     "androidNavigationBar": {
@@ -44,11 +49,6 @@
     "ios": {
       "bundleIdentifier": "com.simplepathstudios.snowstream"
     },
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "backgroundColor": "#ff9a3f"
-    },
-    "icon": "./assets/images/icon.png",
     "extra": {
       "router": {
         "origin": false
