--- a/expo/package.json
+++ b/expo/package.json
@@ -18,6 +18,7 @@
         "react-native": "npm:react-native-tvos@0.79.3-0",
         "react-native-device-info": "14.0.4",
         "react-native-libmpv": "0.6.5",
+        "react-native-safe-area-context": "5.4.0",
         "react-native-screens": "4.11.1",
         "react-native-video": "6.14.1",
         "react-native-web": "0.20.0",
