Adding a bunch of features and bugfixes to support the beast deployment

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -43,5 +43,10 @@ http {
         autoindex on;
         alias /mnt/;
       }
+
+      location /.snowstream/ {
+        autoindex on;
+        alias /mnt/.snowstream/;
+      }
     }
 }
