--- a/expo/package.json
+++ b/expo/package.json
@@ -7,6 +7,7 @@
         "axios": "1.9.0",
         "expo": "53.0.11",
         "expo-build-properties": "0.14.6",
+        "expo-image": "^2.3.0",
         "expo-linking": "7.1.5",
         "expo-navigation-bar": "4.2.5",
         "expo-router": "5.0.7",
