Working on weird modal stuff on tablet

--- a/expo/app.json
+++ b/expo/app.json
@@ -45,7 +45,7 @@
     },
     "android": {
       "package": "com.simplepathstudios.snowstream",
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": false
     },
     "ios": {
       "bundleIdentifier": "com.simplepathstudios.snowstream"
