Getting video to playback without frame drops on Google Streamer

--- a/expo/android/app/build.gradle
+++ b/expo/android/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
-def keystorePropertiesFile = "/home/kretst/Android/keystore.properties"
+def keystorePropertiesFile = System.getenv('SNOWSTREAM_KEYSTORE_PROPS')
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 /**
