--- a/expo/package.json
+++ b/expo/package.json
@@ -5,24 +5,24 @@
     "dependencies": {
         "@react-native-community/slider": "4.5.7",
         "axios": "1.9.0",
-        "expo": "53.0.11",
-        "expo-build-properties": "0.14.6",
-        "expo-image": "^2.3.0",
-        "expo-linking": "7.1.5",
-        "expo-router": "5.0.7",
+        "expo": "53.0.19",
+        "expo-build-properties": "0.14.8",
+        "expo-image": "2.3.2",
+        "expo-linking": "7.1.7",
+        "expo-router": "5.1.3",
         "expo-secure-store": "14.2.3",
         "expo-splash-screen": "0.30.9",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "react-native": "npm:react-native-tvos@0.79.3-0",
+        "react-native": "npm:react-native-tvos@0.79.5-0",
         "react-native-device-info": "14.0.4",
         "react-native-libmpv": "0.6.8",
-        "react-native-safe-area-context": "5.4.0",
+        "react-native-safe-area-context": "5.5.2",
         "react-native-screens": "4.11.1",
-        "react-native-video": "6.16.0",
+        "react-native-video": "6.16.1",
         "react-native-web": "0.20.0",
         "ua-parser-js": "2.0.3",
-        "use-debounce": "^10.0.5"
+        "use-debounce": "10.0.5"
     },
     "devDependencies": {
         "@babel/core": "7.27.4",
