Client device options and updated libmpv component to resolve playback errors

--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,6 @@
 {
     "name": "snowstream",
-    "version": "0.13.2",
+    "version": "0.13.4",
     "main": "expo-router/entry",
     "dependencies": {
         "@react-native-community/slider": "4.5.7",
@@ -16,9 +16,10 @@
         "react-dom": "19.0.0",
         "react-native": "npm:react-native-tvos@0.79.5-0",
         "react-native-device-info": "14.0.4",
-        "react-native-libmpv": "0.8.2",
+        "react-native-libmpv": "0.8.4",
         "react-native-safe-area-context": "5.5.2",
         "react-native-screens": "4.11.1",
+        "react-native-uuid": "^2.0.3",
         "react-native-video": "6.16.1",
         "react-native-web": "0.20.0",
         "ua-parser-js": "2.0.3",
