More shutter color correction attempts

--- a/expo/app.json
+++ b/expo/app.json
@@ -42,7 +42,8 @@
     "orientation": "landscape",
     "android": {
       "package": "com.simplepathstudios.snowstream",
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "backgroundColor": "#000000"
     },
     "ios": {
       "bundleIdentifier": "com.simplepathstudios.snowstream"
