Switching over to the new arch and persisting snowstream build customizations

--- a/expo/app.json
+++ b/expo/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "version": "0.15.12",
     "scheme": "com.simplepathstudios.snowstream",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "plugins": [
       [
         "@react-native-tvos/config-tv",
