--- a/expo/package.json
+++ b/expo/package.json
@@ -9,6 +9,7 @@
         "expo-constants": "~18.0.7",
         "expo-image": "~3.0.6",
         "expo-keep-awake": "~15.0.6",
+        "expo-libmpv": "0.1.1",
         "expo-linking": "~8.0.6",
         "expo-router": "~6.0.0-preview.13",
         "expo-secure-store": "~15.0.6",
@@ -16,7 +17,6 @@
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.1-1",
-        "react-native-libmpv": "0.8.9",
         "react-native-safe-area-context": "^5.6.1",
         "react-native-screens": "4.15.4",
         "react-native-uuid": "2.0.3",
