--- a/expo/android/build.gradle
+++ b/expo/android/build.gradle
@@ -16,6 +16,7 @@ allprojects {
   repositories {
     google()
     mavenCentral()
+    maven { url "/home/kretst/maven-repo" }
     maven { url 'https://www.jitpack.io' }
   }
 }
