--- a/expo/package.json
+++ b/expo/package.json
@@ -3,21 +3,21 @@
     "version": "0.16.8",
     "main": "expo-router/entry",
     "dependencies": {
-        "axios": "1.9.0",
-        "expo": "54.0.0-preview.16",
-        "expo-build-properties": "~1.0.7",
-        "expo-constants": "~18.0.7",
-        "expo-image": "~3.0.6",
-        "expo-keep-awake": "~15.0.6",
+        "axios": "1.12.2",
+        "expo": "54.0.7",
+        "expo-build-properties": "1.0.8",
+        "expo-constants": "18.0.8",
+        "expo-image": "3.0.8",
+        "expo-keep-awake": "15.0.7",
         "expo-libmpv": "0.2.0",
-        "expo-linking": "~8.0.6",
-        "expo-router": "~6.0.0-preview.13",
-        "expo-secure-store": "~15.0.6",
-        "expo-splash-screen": "~31.0.7",
+        "expo-linking": "8.0.8",
+        "expo-router": "6.0.5",
+        "expo-secure-store": "15.0.7",
+        "expo-splash-screen": "31.0.10",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.4-0",
-        "react-native-safe-area-context": "^5.6.1",
+        "react-native-safe-area-context": "5.6.1",
         "react-native-screens": "4.16.0",
         "react-native-uuid": "2.0.3",
         "react-native-video": "6.16.1",
@@ -25,7 +25,7 @@
         "use-debounce": "10.0.6"
     },
     "devDependencies": {
-        "@babel/core": "7.27.4",
+        "@babel/core": "7.28.4",
         "@react-native-tvos/config-tv": "0.1.4",
         "@types/react": "~19.1.10",
         "typescript": "~5.9.2"
