--- a/expo/package.json
+++ b/expo/package.json
@@ -2,6 +2,7 @@
     "name": "snowstream",
     "version": "1.3.3",
     "dependencies": {
+        "@sentry/react-native": "^7.4.0",
         "axios": "1.12.2",
         "expo": "^54.0.13",
         "expo-build-properties": "^1.0.9",
@@ -13,6 +14,7 @@
         "expo-secure-store": "15.0.7",
         "expo-snowui": "1.5.25",
         "expo-splash-screen": "31.0.10",
+        "expo-updates": "^29.0.12",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-native": "npm:react-native-tvos@0.81.4-0",
